--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,8 @@
-.App {
-  text-align: center;
-}
-
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+  background-color: #1988E8;
+  padding: 1.5em;
   color: white;
+  margin-bottom: 1em;
 }
 
 .App-title {
