--- a/src/App.scss
+++ b/src/App.scss
@@ -1,16 +1,5 @@
+@import './sass/vars';
+@import './sass/main';
 @import './sass/offer';
+@import './sass/price';
 
-.App-header {
-  background-color: #1988E8;
-  padding: 1.5em;
-  color: white;
-  margin-bottom: 1em;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
