--- a/src/sass/_offer.scss
+++ b/src/sass/_offer.scss
@@ -1,27 +1,53 @@
-
 .offer {
   background: #fff;
   display: flex;
-  width: 100%;
-}
 
-.offer .description {
-  width: 50%;
-}
+  .description {
+    width: 50%;
+    padding: 1em;
+  }
 
-.offer .stars {
-  list-style: none;
-}
+  .key-words,
+  .stars {
+    list-style: none;
+    padding: 0;
 
-.offer .stars li {
-  display: inline-block;
-  margin-right: 1em;
-}
+    li {
+      display: inline-block;
+      margin-right: 1em;
+    }
+  }
 
-.offer .stars li.filled {
-  color: darkred;
-}
+  .stars {
+    .filled {
+      color: $secondary;
+    }
+  }
 
-.offer .thumb {
+  .key-words {
+    li {
+       background-color: $greylight;
+       padding: 1em;
+       border-radius: 2em;
+    }
+  }
 
+  .location {
+    color: $primary;
+  }
+
+  .thumb {
+    margin: 0;
+    position: relative;
+
+    .title {
+      background: $secondary;
+      color: white;
+      font-weight: bold;
+      position: absolute;
+      text-transform: uppercase;
+      top: 10px;
+      padding: 0.5em;
+    }
+  }
 }
